# snuhcs-course-2025-2-swpp-swpp-2025-project-SNU-SWPP-Template-2

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PLANNING.md  README.md  RECOMMENDATION_LOGIC_CHANGES.md  package-lock.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-backend.yml  pr-checks.yml
MnA_BE/MnA_BE/: settings.py
MnA_BE/S3/: client_factory.py
MnA_BE/apps/MarketIndex/: stockindex_manager.py
MnA_BE/utils/: factory.py
ai-model/: README.md  SUMMARY.md  pyproject.toml
ai-model/examples/scripts/: example_usage.py  hybrid_demo.py  manual_test_with_local_llm.py  test_korean_examples.py  test_korean_openai.py  test_real_model.py
ai-model/src/adapters/: __init__.py  backend_adapter.py  (+1 more)
ai-model/tests/: test_llm_integration.py  test_market_graph.py  test_recommender.py
app/: .gitignore  app.config.ts  app.json  jest.config.js  jest.config.model.js  jest.config.view.js  jest.config.viewmodel.js  metro.config.js  package-lock.json  package.json  tailwind.config.js
app/amplify/: team-provider-info.json
app/app/: app.tsx
app/patches/: expo-camera+15.0.16.patch
app/test/: setup.ts
backend/: .env.example  .flake8  .gitignore  API_DOCUMENTATION.md  README.md  create_dummy_data.py  debug_page.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/ai_integration/: README.md  __init__.py  services.py
backend/barter/: models.py  serializers.py  urls.py  views.py
backend/books/: admin.py  ai_views.py  apps.py  book_search_api.py  models.py  sample_publications.py  serializers.py  urls.py  views.py
backend/core/: settings.py  urls.py
backend/docs/: API_CONVENTIONS.md  API_DOCUMENTATION.md  ARCHITECTURE.md
backend/notify/: serializers.py  utils.py
backend/questions/: factories.py  views.py
backend/reports/: views.py
backend/scripts/: README.md  activate_venv.bat  activate_venv.ps1  activate_venv.sh
backend/social/: admin.py  models.py  serializers.py  urls.py  views.py
backend/submissions/: views.py
backend/tests/: README.md  test_integration.py
backend/voicetutor/: settings.py
docs/: README.md
docs/en/: README.md
docs/ko/: README.md
frontend/: local.properties
frontend/app/: build.gradle.kts
frontend/gradle/: libs.versions.toml
frontend/htmlReport/: coverage.html  index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
research/: .gitignore  test_benchmark_achievement_filtering.py
research/Achievements/: inference.py  predict_multiclass.py  train_multiclass_classifier.py  util.py
server/: .coveragerc  .gitignore  SCRAP_API.md  menu_embeddings_batch_1_1.npy  pyproject.toml  requirements.txt  test_recommendation_api.py  test_streaming.py  update_menu_images.py
server/config/: settings.py  urls.py  views.py
server/menu/: admin.py  apps.py  models.py
server/menu/migrations/: 0001_initial.py  0002_initial.py  0003_alter_menucandidate_image_url.py
server/psql/: .env.example  .gitignore  DETAILED.md  README.md  SETUP_GUIDE.md  client.py  docker-compose.yml  embedding.py  foodlist.py  integration_test_psql.py  preprocess.py  recommend.py  requirements.txt  sample_run.py  test.py  unit_test_psql.py  update_menu_allergens.py
server/psql/db/: schema.sql  schema_update.sql
server/psql/preprocess/: __init__.py  embedding.py  into_db.py  update_menu_allergens.py
server/psql/recommend/: __init__.py  client.py  recommend.py
server/psql/settings/: .env.example  Dockerfile  __init__.py  clean_db.py  db_export.py  db_import.py  docker-compose.yml  setup_env.py  specifications.md  team_sync.py
server/psql/test_run/result/: default_20251026_130015.json  sillim_japanese_20251026_125250.json  venture_korean_20251026_125028.json
server/psql/test_run/user/: default.json  sillim_japanese.json  venture_korean.json
server/psql/testing/: __init__.py  integration_test_psql.py
server/psql_data/: admin.py  apps.py  models.py
server/psql_data/migrations/: 0001_initial.py  0002_dbrestaurant_geom_alter_dbmenu_embedding_vector_and_more.py  0003_alter_dbmenu_embedding_vector_and_more.py
server/recommendation/: admin.py  apps.py  models.py
server/recommendation/migrations/: 0001_initial.py  0002_menureasonfeatures.py  0003_menuexternalmapping_restaurantexternalmapping.py
server/recommendation_system/: README.md  __init__.py  api.py  chroma_index.py  chroma_init.py  explanation_generator.py  nlp_intent_extractor.py  preference_aggregator.py  rl_scoring.py  scoring.py  scoring_strategy.py  simple_test.py  test_system.py  tests.py  unified_embeddings.py  urls.py  user_profile.py
server/recommendation_system/management/commands/: build_index.py
server/restaurant/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
server/restaurant/management/commands/: import_places.py
server/restaurant/migrations/: 0001_initial.py  0002_alter_restaurant_image_url_alter_restaurant_phone_and_more.py
server/users/: admin.py  auth_views.py  foodlist_matcher.py  image_utils.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
server/users/migrations/: 0002_user_created_at_user_nickname_userpreference_and_more.py  0003_add_exploration_preference.py  0004_usergalleryimage_local_uri.py  0005_usergalleryimage_label_alternatives_and_more.py  0006_userpreference_rl_weight_vector_rlweighthistory_and_more.py  0007_add_user_remote_scrap.py
sumdays-backend/controllers/: friendController.js
tools/: README.md
tools/formatters/: format_all.sh  format_kotlin.sh  format_python.py
tools/git-hooks/: setup_pre_commit.sh
(+780 files in other folders)
