# Root pyproject.toml - Shared development tools only
# Individual services (backend, ai-model) have their own pyproject.toml

[project]
name = "swpp-ai-app"
version = "0.1.0"
description = "SWPP AI App - Monorepo root configuration"
requires-python = ">=3.11"

# NO application dependencies here - only dev tools
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================================
# Shared Ruff Configuration (inherited by backend/ and ai-model/)
# ============================================================================

[tool.ruff]
line-length = 79
target-version = "py311"

# Exclude common directories across all Python projects
exclude = [
    ".eggs",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "migrations",
    "__pycache__",
    "node_modules",
]

[tool.ruff.lint]
# Enable common rules for all Python code
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore rules that are too strict or conflict with formatters
ignore = [
    "E501", # Line too long (handled by formatter)
    "B904", # Within except clause, raise from err (too strict for Django)
    "N815", # mixedCase variable (allow for API compatibility)
    "N802", # Function name should be lowercase (Django validators)
    "B017", # assertRaises(Exception) is fine in tests
]

[tool.ruff.lint.per-file-ignores]
# Common per-file ignores for all Python projects
"__init__.py" = ["F401"]
"**/migrations/**" = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
"**/asgi.py" = ["E402"]
"**/settings.py" = ["E402"]
"test_*.py" = ["E402", "F401", "F841", "S101"]

# ============================================================================
# Shared Flake8 configuration to align with Ruff defaults
# ============================================================================
[tool.flake8]
max-line-length = 79
extend-ignore = [
    "E203", # Whitespace before ':', conflicts with Black
    "W503", # Line break before binary operator, conflicts with Black
    "E501", # Line too long handled by formatter
]
exclude = [
    ".eggs",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "migrations",
    "__pycache__",
    "node_modules",
]
per-file-ignores = [
    "__init__.py:F401",
    "**/asgi.py:E402",
    "**/settings.py:E402",
    "**/tests/**:E402,F401,F841",
    "ai-model/examples/scripts/*.py:E402,F401",
]
"**/tests/**" = ["E402", "F401", "F841", "S101"]
"*/admin.py" = ["F401"]

[tool.ruff.lint.isort]
# Common isort settings
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# Shared Black Configuration
# ============================================================================

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# ============================================================================
# Shared isort Configuration
# ============================================================================

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/.venv/*", "*/venv/*"]

# ============================================================================
# Shared Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["backend/tests", "ai-model/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers", "--strict-config", "--showlocals"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ============================================================================
# Shared Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["backend", "ai-model"]
omit = ["*/migrations/*", "*/tests/*", "*/.venv/*", "*/venv/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
