[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.55",
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.1",
    "httpie>=3.2.4",
    "numpy>=1.26.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]